# Chisel

./: .clang-format  .editorconfig  .gitignore  .gitmodules  README.md  compile_flags.txt  meson.build
.github/workflows/: artifacts.yml
runtime/: chisel.ui.ini  chisel_ui_default.ini
runtime/core/: test.fgd
runtime/core/shaders/: brush.psc  brush.vsc  brush_blend.psc  brush_blend.vsc  brush_debug_id.psc  color.psc  color.vsc  debug_id_brush.psc  debug_id_sprite.psc  debug_id_sprite.vsc  grid.psc  grid.vsc  model.psc  model.vsc  objectid.csc  sprite.psc  sprite.vsc
shaders/: basic.vert  bgfx_shader.sh  billboard.vert  brush.frag  brush.hlsl  brush.hlsli  brush.vert  brush_blend.hlsl  brush_debug_id.hlsl  build.bat  build.sh  cbuffers.hlsli  color.frag  color.hlsl  common.glsl  common.hlsli  debug_id_sprite.hlsl  flat.frag  flat.fs.glsl  flat.vert  flat.vs.glsl  fs_color.glsl  fs_cubes.glsl  fs_grid.glsl  fs_sprite.glsl  grid.frag  grid.hlsl  grid.vert  hammer_flat.fs.glsl  model.hlsl  model.hlsli  objectid.compute  sprite.frag  sprite.hlsl  varying.def.sc  vs_basic.glsl  vs_billboard.glsl  vs_grid.glsl
src/: meson.build
src/assets/: Asset.h  AssetLoader.h  AssetTypes.h  Assets.cpp  Assets.h  SearchPaths.h
src/assets/loaders/: Materials.cpp  MeshMDL.cpp  MeshOBJ.cpp  Textures.cpp
src/chisel/: Chisel.cpp  Chisel.h  Engine.cpp  Engine.h  Enums.h  ExportMap.cpp  ExportMap.h  Gizmos.cpp  Gizmos.h  Hammer.cpp  Hammer.h  Handles.cpp  Handles.h  KeyValues.h  Keybinds.h  MapRender.cpp  MapRender.h  Selection.cpp  Selection.h  Settings.cpp  Settings.h  Solid.cpp  Tools.cpp  Tools.h  Types.h  VMF.cpp  VMF.h
src/chisel/CSG/: AABB.h  Brush.cpp  Brush.h  CSGTree.cpp  CSGTree.h  Edge.h  Face.cpp  Face.h  FaceCache.cpp  FaceCache.h  Fragment.cpp  Fragment.h  Plane.h  Relation.h  Side.h  Types.h  Userdata.h  Vertex.cpp  Vertex.h  Volume.h
src/chisel/FGD/: FGD.cpp  FGD.h
src/chisel/VMF/: KeyValues.h  Solid.cpp  VMF.cpp  VMF.h
src/chisel/formats/: FormatBox.cpp  FormatMap.cpp  FormatVMF.cpp  Formats.h
src/chisel/gui/: Keybinds.h  Layout.h  Viewport.h
src/chisel/map/: Action.h  Atom.h  Brush.h  Common.h  Convex.h  Displacement.h  Entity.cpp  Entity.h  Face.cpp  Face.h  Map.cpp  Map.h  Orientation.h  RayHit.h  Serialization.h  Solid.cpp  Solid.h  Types.h  Volume.h
src/chisel/tools/: BlockTool.cpp  ClipTool.cpp  EntityTool.cpp  PlacementTool.cpp  PlacementTool.h  PolygonTool.cpp  SelectTool.cpp  SelectTool.h  Tool.cpp  Tool.h  TransformTool.cpp  TransformTool.h
src/common/: AlignedStorage.h  Bit.h  Common.h  Compiler.h  Enum.h  Event.h  Filesystem.h  FixedString.h  Flags.h  Hash.h  Parse.h  Path.h  Property.h  Ranges.h  Rc.h  Reflection.h  Result.h  SmallVector.h  Span.h  String.h  System.h  Time.h  Traits.h  VTable.h  Variant.h
src/common/parser/: Cursor.h  Lexer.h  Parser.h  Token.h
src/console/: ConCommand.h  ConVar.h  Console.h  ConsoleCommands.cpp  ConsoleCommands.h
src/core/: Bit.h  Camera.h  Flags.h  GraphicsBuffer.h  IndexBuffer.h  Mesh.h  Primitives.h  System.h  Transform.h  VertexBuffer.h  VertexLayout.h
src/editor/: Editor.cpp  Editor.h  Gizmos.h  Handles.h  Icons.h  Keybinds.h  Selection.h  Tools.cpp  Tools.h
src/editor/gui/: AssetBrowser.h  Inspector.h  Layout.h  Outline.h  SceneView.h  View3D.h
src/engine/: Engine.h  Time.h
src/entity/: Behavior.h  Common.h  Component.h  Entity.h  Scene.h
src/entity/components/: Camera.h  Light.h  MeshRenderer.h  Name.h  Parent.h  Transform.h
src/formats/: KeyValues.h
src/gui/: AssetPicker.cpp  AssetPicker.h  Common.cpp  Common.h  ConsoleWindow.h  IconsMaterialCommunity.h  Inspector.cpp  Inspector.h  Keybinds.h  Layout.cpp  Layout.h  Modal.h  SettingsWindow.cpp  SettingsWindow.h  ToolProperties.cpp  ToolProperties.h  Toolbar.h  View3D.cpp  View3D.h  Viewport.cpp  Viewport.h  Window.h
src/gui/impl/: imgui.hlsl  imgui_impl_bgfx.cpp  imgui_impl_bgfx.h  imgui_impl_dx11.cpp  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_ps.h  imgui_vs.h
src/hammer/: Gizmos.h  Hammer.cpp  Hammer.h  Handles.h  Icons.h  KeyValues.h  Keybinds.h  MapRender.h  Selection.h  Solid.cpp  Tools.cpp  Tools.h  VMF.h
src/hammer/gui/: Keybinds.h  Layout.h  Viewport.h
src/imgui/: Common.cpp  Common.h  ConsoleWindow.h  IconsMaterialCommunity.h  Window.h
src/imgui/impl/: fs_ocornut_imgui.bin.h  imgui_impl_bgfx.cpp  imgui_impl_sdl.cpp  imgui_impl_sdl.h  vs_ocornut_imgui.bin.h
src/input/: Input.h  InputMap.h  Keyboard.h  Mouse.h
src/main/: Main.cpp
src/math/: AABB.h  Color.h  Math.h  Plane.h  Ray.h  Winding.h
src/platform/: Cursor.h  Platform.h  Window.h
src/platform/linux/: PlatformLinux.cpp
src/platform/sdl/: CursorSDL.cpp  WindowSDL.cpp
src/platform/win32/: PlatformWin32.cpp  windows_default.manifest
src/render/: BlendMode.h  BlendState.h  CBuffers.h  Com.h  D3D11Include.h  Render.cpp  Render.h  RenderContext.h  RenderSystem.h  Texture.h  TextureFormat.h
src/render/bgfx/: RenderBGFX.cpp
src/render/d3d11/: RenderD3D11.cpp
src/render/pipelines/: Forward.cpp  Forward.h  RenderPipeline.h
src/render/vk/: RenderVK.cpp
submodules/tinyobjloader/: tiny_obj_loader.h
subprojects/: dxvk.wrap  entt.wrap  imgui.wrap  imguizmo.wrap  sdl2.wrap
subprojects/packagefiles/SDL2-2.0.20/: meson.build
subprojects/packagefiles/imgui/: meson.build
subprojects/packagefiles/imguizmo/: meson.build
tests/: c1a0_d.vmf  test_disp.vmf
tools/: icons.py
