project('imguizmo', 'cpp')

imguizmo_dep = declare_dependency(
    sources: files(
        'ImGuizmo.cpp',
        'GraphEditor.cpp',
        'ImCurveEdit.cpp',
        'ImGradient.cpp',
        'ImSequencer.cpp',
    ),
    include_directories: include_directories(
        '.'
    )
)
